# pipecat-slng

./: .env.example  .gitignore  AGENTS.md  CHANGELOG.md  LICENSE  README.md  SPEC.md  main.py  pyproject.toml
.github/workflows/: ci.yml
docs/superpowers/specs/: 2026-05-29-pipecat-slng-community-integration-design.md
examples/: bot.py
src/pipecat_slng/: __init__.py  _errors.py  stt.py  tts.py
tests/: conftest.py  test_ci_workflow.py  test_live_smoke.py  test_stt.py  test_tts.py
