[project]
name = "pipecat-slng"
version = "0.2.0"
description = "SLNG STT/TTS services for Pipecat (WebSocket + HTTP)"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "BSD-2-Clause" }
authors = [{ name = "slng.ai" }]
keywords = ["pipecat", "slng", "stt", "tts", "voice-ai", "websocket", "http"]
dependencies = [
    "pipecat-ai>=1.3.0",
    "websockets>=13.0",
    "aiohttp>=3.9",
]

[project.optional-dependencies]
example = ["pipecat-ai[runner,silero,webrtc,openai]>=1.3.0"]

[project.urls]
Homepage = "https://slng.ai"
Repository = "https://github.com/slng-ai/pipecat-slng"

[dependency-groups]
dev = [
    "ruff>=0.15.14",
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "ty>=0.0.40",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/pipecat_slng"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 88
indent-width = 4
target-version = "py311"
exclude = [".venv", "build", "dist"]

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F"]
ignore = []
fixable = ["ALL"]
unfixable = []
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
